5 спринт 2 версия 1. Конкретизировал тип коллекции в HistoryManager. 2. В InMemoryHistoryManager для хранения истории использовал LinkedList 3. В InMemoryHistoryManager создал статическую константу с максимальным размером списка истории. В методе checkHistory() поменял while на if. 4 В InMemoryTaskManager, inMemoryHistoryManager создается через метод getDefaultHistory() класса Managers. 5. В InMemoryTaskManager в методе add сделал проверку на null.